--- a/src/App/App.css
+++ b/src/App/App.css
@@ -28,6 +28,16 @@
   color: #61dafb;
 }
 
+.chart {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.jsonData {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
