--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -1,7 +1,7 @@
 .Footer {
-  position: absolute;
   bottom: 0;
   width: 100%;
+  height: 40px;
   background: #3381b5;
   border-top: 2px solid #000000;
   text-align: center;
