--- a/src/App/App.css
+++ b/src/App/App.css
@@ -46,3 +46,10 @@
     transform: rotate(360deg);
   }
 }
+
+table, th, td {
+  margin-left: 20px;
+  margin-bottom: 10px;
+  border: 1px solid black;
+  border-collapse: collapse;
+}
